fix(api): return schedule recurrence rules
